manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  labels:
    app: ui
    env: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
        env: dev
    spec:
      containers:
        - name: ui
          image: rakesh556575/ui:vers1
          imagePullPolicy: Always
          ports:
            - name:  http
              containerPort: 8080
              protocol: TCP
