manifests/service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  uisvc
spec:
  selector:
    app:  ui
  type:  LoadBalancer
  ports:
    - name:  http
      port:  80
      targetPort: 8080
