manifests/ingresssvc.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-myservicea
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host:
      http:
        paths:
          - path: /
            backend:
              serviceName: uisvc
              servicePort: 80
          - path: /auth
            backend:
                serviceName: authsvc
                servicePort: 3000
